fix: restore missing hooks imports in documentos test, fix ESLint strict mode and update stack badges